Fix title spacing in bzrx token page

--- a/_sass/pages/_bzrx-token.scss
+++ b/_sass/pages/_bzrx-token.scss
@@ -3,10 +3,10 @@
   flex-wrap: wrap;
   justify-content: space-between;
   @media screen and (min-width: 992px) {
-    padding: 105px 0 30px 0;
+    padding: 105px 0 0 0;
   }
   @media screen and (max-width: 991px) {
-    padding: 0 0 45px 0;
+    padding: 0 0 15px 0;
   }
   .item-bzrx {
     background-color: #e9f4ff;
@@ -191,6 +191,7 @@
     h2 {
       font-size: 32px;
       margin-bottom: 30px;
+      margin-top: 30px;
     }
     p {
       font-size: 18px;
@@ -201,6 +202,7 @@
     h2 {
       font-size: 26px;
       margin-bottom: 15px;
+      margin-top: 15px;
     }
     p {
       font-size: 13px;
